# greentic-events

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION_STATUS.md  README.md
.codex/: EventsValWasmPR-01.md  PR-11A.md  PR-11B.md  repo_overview.md
.github/workflows/: ci.yml  publish.yml
ci/: local_check.sh
crates/greentic-events-pack-validator/: Cargo.toml
crates/greentic-events-pack-validator/src/: lib.rs
crates/greentic-events-runtime/: Cargo.toml
crates/greentic-events-runtime/src/: install.rs  lib.rs
crates/greentic-events-runtime/tests/: install_runtime.rs
crates/greentic-events-validate/: Cargo.toml
crates/greentic-events-validate/src/: lib.rs
docs/: PROVIDERS.md  e2e_live_protocol.md  events_provider_core_flows.md  pack-validation.md  provider_core_events_ops.md  runner-integration.md  secrets-events.md  validation.md
docs/migrations/: GE-PR-02.md
flows/events/: publish_event.flow.yaml
schemas/events/common/: event_envelope.schema.json
schemas/events/ops/: ack.input.schema.json  ack.output.schema.json  publish.input.schema.json  publish.output.schema.json  subscribe.input.schema.json  subscribe.output.schema.json
scripts/: build_validators_pack.sh  events_provider_doctor.sh  events_provider_fetch.sh  events_provider_smoke.sh  inspect_pack.sh  pull_providers.sh
src/: acl.rs  backoff.rs  bridge.rs  bus.rs  e2e.rs  error.rs  idempotency.rs  lib.rs  metrics.rs  pattern.rs  provider.rs  provider_ops.rs  runner.rs  subscription.rs  validate.rs
tests/: cli_smoke.rs  config_precedence.rs  event_bus.rs  provider_core_ops.rs  runner_wit.rs  support.rs
tests/e2e/: e2e_runner.rs
tests/fixtures/: publish_input.json  publish_output.json
tests/fixtures/packs/events_bridge/: pack.yaml
tests/fixtures/packs/events_fake/: pack.yaml
tests/fixtures/packs/events_overrides/: pack.yaml
validators/events/: pack.yaml
validators/events/flows/: validate.ygtc  validate.ygtc.resolve.json  validate.ygtc.resolve.summary.json
