[workspace]
members = [
    ".",
    "crates/greentic-events-runtime",
    "crates/greentic-events-validate",
    "crates/greentic-events-pack-validator",
]
resolver = "2"

[workspace.dependencies]
greentic-config-types = "0.4.8"
greentic-config = "0.4.9"

[package]
name = "greentic-events"
version = "0.4.7"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Greentic event fabric core: publish/subscribe routing, reliability, ACLs, observability, and pack-driven provider/bridge discovery."
repository = "https://github.com/greentic-ai/greentic-events"
readme = "README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
greentic-telemetry = { version = "0.4", features = ["otlp"] }
greentic-types = { version = "0.4.39", features = ["serde", "schemars", "time"] }
greentic_pack = { package = "greentic-pack-lib", version = "0.4" }
greentic-flow = "0.4.30"
opentelemetry = "0.31"
rand = "0.9"
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
greentic-config = { workspace = true }
greentic-config-types = { workspace = true }
toml = "0.9"
semver = "1"

[dev-dependencies]
jsonschema = "0.37"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry"] }
tempfile = "3"

[[bin]]
name = "greentic-events-cli"
path = "src/bin/greentic-events.rs"

[[bin]]
name = "greentic-events-test"
path = "src/bin/greentic-events-test.rs"

[[bin]]
name = "greentic-events-fixture"
path = "src/bin/greentic-events-fixture.rs"
