[package]
name = "greentic-events-pack-validator"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WASM pack validator component for Greentic events packs."

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.51"
greentic-types = { version = "0.4", features = ["serde"] }
serde_json = "1"
