[package]
name = "greentic-events-validate"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Pack validators for Greentic events domain packs."

[dependencies]
greentic-types = { version = "0.4", features = ["serde"] }
serde_json = "1"

[dev-dependencies]
indexmap = "2"
semver = "1"
serde_json = "1"
